# Inchworm_sunghyuk

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crawling_robot_controller/share/crawling_robot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/crawling_robot_controller/share/crawling_robot_controller/cmake/: crawling_robot_controllerConfig-version.cmake  crawling_robot_controllerConfig.cmake
install/crawling_robot_controller/share/crawling_robot_controller/environment/: ament_prefix_path.dsv  path.dsv
install/crawling_robot_controller/share/crawling_robot_controller/launch/install/: .colcon_install_layout  COLCON_IGNORE  _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crawling_robot_controller/share/crawling_robot_controller/launch/log/: COLCON_IGNORE
src/crawling_robot_controller/: CMakeLists.txt
src/crawling_robot_controller/gripper_control_callback.ino/: gripper_control_callback.ino.ino
src/crawling_robot_controller/include/crawling_robot_controller/: define.h  dynamixel_funtion.h
src/crawling_robot_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/crawling_robot_controller/install/crawling_robot_controller/lib/crawling_robot_controller/: position_control
src/crawling_robot_controller/launch/: robot_launch.py
src/crawling_robot_controller/log/: latest_build
src/crawling_robot_controller/msg/: GripperState.msg
src/crawling_robot_controller/src/: angular_calculate  angular_calculate.cpp  newposition_control  position_control.cpp
(+38 files in other folders)
