<?xml version="1.0"?>
<package format="3">
  <name>crawling_robot_controller</name>
  <version>0.0.0</version>
  <description>Package for controlling robot</description>  
  <maintainer email="ryung9514@naver.com">ryung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>  
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>